issue with docker

--- a/Bookify.Api/appsettings.Development.json
+++ b/Bookify.Api/appsettings.Development.json
@@ -6,6 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "DataBase": "Host=bookify-db;Port=1433;Database=Bookify;Username =sa ; Password = 10912_34As8;"
+    "DataBase": "Data Source=bookify-db;Initial Catalog=Bookify;User Id=sa;Password=as_1380MahaN_sd;TrustServerCertificate=True;"
   }
+
 }
+
+
+
